--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -22,10 +22,20 @@
                 <i class="fas fa-envelope nav-bar-icon"></i>
                 Contact Us
             </a>
-            <a routerLink="/home/contactus" routerLinkActive="selected" class="link-container-item">
-                <i class="fas fa-sign-in-alt nav-bar-icon"></i>
-                Login
-            </a>
+
+            <ng-container *ngIf="(auth.isAuthenticated$ | async)">
+                <a routerLink="" (click)="logout()" class="link-container-item">
+                    <i class="fas fa-sign-in-alt nav-bar-icon"></i>
+                    Log out
+                </a>
+            </ng-container>
+            <ng-container *ngIf="!(auth.isAuthenticated$ | async)">
+                <a routerLink="" (click)="auth.loginWithRedirect()" class="link-container-item">
+                    <i class="fas fa-sign-in-alt nav-bar-icon"></i>
+                    Log in
+                </a>
+            </ng-container>
+            
         </div>
     </div>
     <div class="right-content-area">
