Navbar bug fixed
Navbar height bug fixed including resize a bit of right content area

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,6 +1,6 @@
-<div class="mainpage-container">
-    <div class="left-nav-bar">
-        <div class="nav-bar-link-container">
+<div class="mainpage-container sticky">
+    <div class="left-nav-bar ">
+        <div class="nav-bar-link-container sticky">
             <!-- routerLinkActive="selected" : only apply the selected class to the <a> when the user is in that routerLink-->
                 <a routerLink="/home/search" routerLinkActive="selected" class="link-container-item">
                 <i class="fas fa-search nav-bar-icon"></i>
