--- a/src/app/components/main-page/main-page.component.css
+++ b/src/app/components/main-page/main-page.component.css
@@ -8,6 +8,11 @@
     background: rgba(0, 0, 0, 0.2);
     height: 100%;
     width: 300px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
 }
 
 .nav-bar-link-container {
@@ -68,8 +73,8 @@
 }
 
 .right-content-area {
-    padding: 50px;
-    height: 100%;
+    margin-top: 30px;
+    margin-left: 300px;
     width: calc(100%-50px);
 }
 
