--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,7 +2,11 @@
     <div class="left-nav-bar ">
         <div class="nav-bar-link-container sticky">
             <!-- routerLinkActive="selected" : only apply the selected class to the <a> when the user is in that routerLink-->
-                <a routerLink="/home/search" routerLinkActive="selected" class="link-container-item">
+            <a routerLink="/home/post" routerLinkActive="selected" class="link-container-item">
+                <i class="fas fa-images nav-bar-icon"></i>
+                Post
+            </a>
+            <a routerLink="/home/search" routerLinkActive="selected" class="link-container-item">
                 <i class="fas fa-search nav-bar-icon"></i>
                 Search
             </a>
